# shorty

./: .dockerignore  .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  app.py
src/common/: models.py
src/common/config/: constants.py  settings.py
src/database/: db_client.py  indexes.py
src/database/shortner/: lib.py  schema.py
src/domains/health_check/: routes.py
src/domains/shortner/: models.py  routes.py  service.py
src/domains/shortner/core/: generator.py  validators.py
